Assignment 1/part2_src/csce322as01pt02Parser.java
// Generated from csce322as01pt02.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class csce322as01pt02Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, BEGINNING_OF_SECTION=2, END_OF_SECTION=3, BOARD=4, LADDERS=5, 
		CHUTES=6, POSITIONS=7, VALUE_ASSIGNMENT=8, NUMBER=9, ROW_SEPARATOR=10, 
		BEGINNING_OF_BOARD=11, END_OF_BOARD=12, BEGINNING_OF_LIST=13, END_OF_LIST=14, 
		WS=15;
	public static final String[] tokenNames = {
		"<INVALID>", "','", "'<='", "'=>'", "'GameBoard'", "'Ladders'", "'Chutes'", 
		"'Positions'", "'<-'", "NUMBER", "'^'", "'['", "']'", "'{'", "'}'", "WS"
	};
	public static final int
		RULE_chutesNladders = 0, RULE_chutesORladders = 1, RULE_number_of_players = 2, 
		RULE_pos_tail = 3, RULE_number_of_chutes = 4, RULE_chutes_tail = 5, RULE_number_of_ladders = 6, 
		RULE_ladders_tail = 7, RULE_gameBoard_line = 8, RULE_tail = 9, RULE_start_section = 10, 
		RULE_end_section = 11, RULE_board = 12, RULE_ladders = 13, RULE_chutes = 14, 
		RULE_positions = 15, RULE_value_assignment = 16, RULE_number = 17, RULE_row_separator = 18, 
		RULE_beginning_board = 19, RULE_end_board = 20, RULE_beginning_list = 21, 
		RULE_end_list = 22, RULE_valid_token = 23;
	public static final String[] ruleNames = {
		"chutesNladders", "chutesORladders", "number_of_players", "pos_tail", 
		"number_of_chutes", "chutes_tail", "number_of_ladders", "ladders_tail", 
		"gameBoard_line", "tail", "start_section", "end_section", "board", "ladders", 
		"chutes", "positions", "value_assignment", "number", "row_separator", 
		"beginning_board", "end_board", "beginning_list", "end_list", "valid_token"
	};

	@Override
	public String getGrammarFileName() { return "csce322as01pt02.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		int players_counter;
		int chutes_counter;
		int ladders_counter;
		int rows_counter;
		int columns_counter;
		int isValidGame = 1;
		
		 // List that stores all the semantic errors found in the input file
		java.util.List<Integer> errorRules = new java.util.ArrayList<Integer>();
		
		/*
		 * Function that prints all semantic errors found in the input file
		 */
		private void printErrRules(java.util.List list) {
			
			java.util.Collections.sort(list);
			
			for(int i = 0; i < list.size(); i++)
				System.out.println("Semantic Error: Rule " + list.get(i) + " Violated");
		}
		
		/*
		 * Function that prints one invalid token and the line in which it was found
		 */
		private void printInvalidToken(String token, int line) {
			
			System.out.println(token + " in Line "+ line + " is an Invalid Token");
		}

	public csce322as01pt02Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ChutesNladdersContext extends ParserRuleContext {
		public ChutesORladdersContext chutesORladders(int i) {
			return getRuleContext(ChutesORladdersContext.class,i);
		}
		public End_boardContext end_board() {
			return getRuleContext(End_boardContext.class,0);
		}
		public End_listContext end_list() {
			return getRuleContext(End_listContext.class,0);
		}
		public List<End_sectionContext> end_section() {
			return getRuleContexts(End_sectionContext.class);
		}
		public Number_of_playersContext number_of_players() {
			return getRuleContext(Number_of_playersContext.class,0);
		}
		public Beginning_boardContext beginning_board() {
			return getRuleContext(Beginning_boardContext.class,0);
		}
		public Beginning_listContext beginning_list() {
			return getRuleContext(Beginning_listContext.class,0);
		}
		public BoardContext board() {
			return getRuleContext(BoardContext.class,0);
		}
		public List<Start_sectionContext> start_section() {
			return getRuleContexts(Start_sectionContext.class);
		}
		public List<Value_assignmentContext> value_assignment() {
			return getRuleContexts(Value_assignmentContext.class);
		}
		public TerminalNode EOF() { return getToken(csce322as01pt02Parser.EOF, 0); }
		public Start_sectionContext start_section(int i) {
			return getRuleContext(Start_sectionContext.class,i);
		}
		public List<ChutesORladdersContext> chutesORladders() {
			return getRuleContexts(ChutesORladdersContext.class);
		}
		public GameBoard_lineContext gameBoard_line() {
			return getRuleContext(GameBoard_lineContext.class,0);
		}
		public PositionsContext positions() {
			return getRuleContext(PositionsContext.class,0);
		}
		public End_sectionContext end_section(int i) {
			return getRuleContext(End_sectionContext.class,i);
		}
		public Value_assignmentContext value_assignment(int i) {
			return getRuleContext(Value_assignmentContext.class,i);
		}
		public ChutesNladdersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chutesNladders; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterChutesNladders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitChutesNladders(this);
		}
	}

	public final ChutesNladdersContext chutesNladders() throws RecognitionException {
		ChutesNladdersContext _localctx = new ChutesNladdersContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chutesNladders);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); start_section();
			setState(49); positions();
			setState(50); value_assignment();
			setState(51); beginning_list();
			setState(52); number_of_players();

			                    	if(!(players_counter >= 2 && players_counter <= 4)) {
			                    		errorRules.add(2);
			                    		isValidGame = 0;
			                    	}
			                    
			setState(54); end_list();
			setState(55); end_section();
			setState(56); start_section();
			setState(57); chutesORladders();
			setState(58); end_section();
			setState(59); start_section();
			setState(60); chutesORladders();
			setState(61); end_section();
			setState(62); start_section();
			setState(63); board();
			setState(64); value_assignment();
			setState(65); beginning_board();
			setState(66); gameBoard_line();

			                    	int columns = columns_counter/rows_counter;
			                    	
			                    	if(!(rows_counter > 4 && rows_counter < 20)) {
			                    		errorRules.add(5);
			                    		isValidGame = 0;
			                    	}
			                    	if(!(columns > 4 && columns < 20)) {
			                    		errorRules.add(6);
			                    		isValidGame = 0;
			                    	}
			                    
			setState(68); end_board();
			setState(69); end_section();
			setState(70); match(EOF);

			        		/*
			        		 * After checking the whole board and non-semantic error was found, 
			        		 * it's considered that the input is totally correct and the final line 
			        		 * is printed out. Otherwise, a semantic error may be printed out.
			        		 */
			        		if(isValidGame == 1)
			        			System.out.println("The board has " + chutes_counter + " chutes and " + ladders_counter + " ladders");
			        		else {
			        			if (!errorRules.isEmpty())
			        				printErrRules(errorRules);
			        		}
			        	
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChutesORladdersContext extends ParserRuleContext {
		public TerminalNode CHUTES() { return getToken(csce322as01pt02Parser.CHUTES, 0); }
		public Value_assignmentContext value_assignment() {
			return getRuleContext(Value_assignmentContext.class,0);
		}
		public TerminalNode LADDERS() { return getToken(csce322as01pt02Parser.LADDERS, 0); }
		public End_listContext end_list() {
			return getRuleContext(End_listContext.class,0);
		}
		public Number_of_laddersContext number_of_ladders() {
			return getRuleContext(Number_of_laddersContext.class,0);
		}
		public Number_of_chutesContext number_of_chutes() {
			return getRuleContext(Number_of_chutesContext.class,0);
		}
		public Beginning_listContext beginning_list() {
			return getRuleContext(Beginning_listContext.class,0);
		}
		public ChutesORladdersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chutesORladders; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterChutesORladders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitChutesORladders(this);
		}
	}

	public final ChutesORladdersContext chutesORladders() throws RecognitionException {
		ChutesORladdersContext _localctx = new ChutesORladdersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_chutesORladders);
		try {
			setState(87);
			switch (_input.LA(1)) {
			case CHUTES:
				enterOuterAlt(_localctx, 1);
				{
				setState(73); match(CHUTES);
				setState(74); value_assignment();
				setState(75); beginning_list();
				setState(76); number_of_chutes();

				                    	if(!(chutes_counter > 2 && chutes_counter < 11)) {
				                    		errorRules.add(3);
				                    		isValidGame = 0;
				                    	}
				                    
				setState(78); end_list();
				}
				break;
			case LADDERS:
				enterOuterAlt(_localctx, 2);
				{
				setState(80); match(LADDERS);
				setState(81); value_assignment();
				setState(82); beginning_list();
				setState(83); number_of_ladders();

				                    	if(!(ladders_counter > 2 && ladders_counter < 11)) {
				                    		errorRules.add(4);
				                    		isValidGame = 0;
				                    	}
				                    
				setState(85); end_list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Number_of_playersContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public Pos_tailContext pos_tail() {
			return getRuleContext(Pos_tailContext.class,0);
		}
		public Number_of_playersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number_of_players; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterNumber_of_players(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitNumber_of_players(this);
		}
	}

	public final Number_of_playersContext number_of_players() throws RecognitionException {
		Number_of_playersContext _localctx = new Number_of_playersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_number_of_players);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); match(NUMBER);
			setState(90); pos_tail();
			players_counter++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pos_tailContext extends ParserRuleContext {
		public Valid_tokenContext valid_token() {
			return getRuleContext(Valid_tokenContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public Pos_tailContext pos_tail() {
			return getRuleContext(Pos_tailContext.class,0);
		}
		public Pos_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pos_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterPos_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitPos_tail(this);
		}
	}

	public final Pos_tailContext pos_tail() throws RecognitionException {
		Pos_tailContext _localctx = new Pos_tailContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pos_tail);
		try {
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93); match(T__0);
				setState(94); match(NUMBER);
				setState(95); pos_tail();
				players_counter++;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98); match(T__0);
				setState(99); match(NUMBER);
				players_counter++;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(101); valid_token();
				System.exit(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Number_of_chutesContext extends ParserRuleContext {
		public Chutes_tailContext chutes_tail() {
			return getRuleContext(Chutes_tailContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public Number_of_chutesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number_of_chutes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterNumber_of_chutes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitNumber_of_chutes(this);
		}
	}

	public final Number_of_chutesContext number_of_chutes() throws RecognitionException {
		Number_of_chutesContext _localctx = new Number_of_chutesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_number_of_chutes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(NUMBER);
			setState(107); chutes_tail();
			chutes_counter++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Chutes_tailContext extends ParserRuleContext {
		public Chutes_tailContext chutes_tail() {
			return getRuleContext(Chutes_tailContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public Chutes_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chutes_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterChutes_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitChutes_tail(this);
		}
	}

	public final Chutes_tailContext chutes_tail() throws RecognitionException {
		Chutes_tailContext _localctx = new Chutes_tailContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_chutes_tail);
		try {
			setState(119);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110); match(T__0);
				setState(111); match(NUMBER);
				setState(112); chutes_tail();
				chutes_counter++;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115); match(T__0);
				setState(116); match(NUMBER);
				chutes_counter++;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Number_of_laddersContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public Ladders_tailContext ladders_tail() {
			return getRuleContext(Ladders_tailContext.class,0);
		}
		public Number_of_laddersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number_of_ladders; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterNumber_of_ladders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitNumber_of_ladders(this);
		}
	}

	public final Number_of_laddersContext number_of_ladders() throws RecognitionException {
		Number_of_laddersContext _localctx = new Number_of_laddersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_number_of_ladders);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(NUMBER);
			setState(122); ladders_tail();
			ladders_counter++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ladders_tailContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public Ladders_tailContext ladders_tail() {
			return getRuleContext(Ladders_tailContext.class,0);
		}
		public Ladders_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ladders_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterLadders_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitLadders_tail(this);
		}
	}

	public final Ladders_tailContext ladders_tail() throws RecognitionException {
		Ladders_tailContext _localctx = new Ladders_tailContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ladders_tail);
		try {
			setState(134);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125); match(T__0);
				setState(126); match(NUMBER);
				setState(127); ladders_tail();
				ladders_counter++;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130); match(T__0);
				setState(131); match(NUMBER);
				ladders_counter++;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GameBoard_lineContext extends ParserRuleContext {
		public TailContext tail() {
			return getRuleContext(TailContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public GameBoard_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gameBoard_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterGameBoard_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitGameBoard_line(this);
		}
	}

	public final GameBoard_lineContext gameBoard_line() throws RecognitionException {
		GameBoard_lineContext _localctx = new GameBoard_lineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_gameBoard_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(NUMBER);
			columns_counter++;
			setState(138); tail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TailContext extends ParserRuleContext {
		public TailContext tail() {
			return getRuleContext(TailContext.class,0);
		}
		public TerminalNode ROW_SEPARATOR() { return getToken(csce322as01pt02Parser.ROW_SEPARATOR, 0); }
		public TerminalNode NUMBER() { return getToken(csce322as01pt02Parser.NUMBER, 0); }
		public GameBoard_lineContext gameBoard_line() {
			return getRuleContext(GameBoard_lineContext.class,0);
		}
		public TailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterTail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitTail(this);
		}
	}

	public final TailContext tail() throws RecognitionException {
		TailContext _localctx = new TailContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tail);
		try {
			setState(153);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(140); match(T__0);
				setState(141); match(NUMBER);
				columns_counter++;
				setState(143); tail();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144); match(T__0);
				setState(145); match(NUMBER);
				columns_counter++;
				setState(147); match(ROW_SEPARATOR);
				rows_counter++;
				setState(149); gameBoard_line();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(150); match(T__0);
				setState(151); match(NUMBER);
				columns_counter++; rows_counter++;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_sectionContext extends ParserRuleContext {
		public Valid_tokenContext valid_token() {
			return getRuleContext(Valid_tokenContext.class,0);
		}
		public TerminalNode BEGINNING_OF_SECTION() { return getToken(csce322as01pt02Parser.BEGINNING_OF_SECTION, 0); }
		public Start_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).enterStart_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322as01pt02Listener ) ((csce322as01pt02Listener)listener).exitStart_section(this);
		}
	}

	public final Start_sectionContext start_section() throws RecognitionException {
		Start_sectionContext _localctx = new Start_sectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_start_section);
		try {
			setState(159);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155); match(BEGINNING_OF_SECTION);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156); valid_token();
				System.exit(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
